增加排版标签学习

--- a/src/html/stylelearn.html
+++ b/src/html/stylelearn.html
@@ -8,15 +8,9 @@
     <title>Document</title>
 </head>
 
-<a href="html/stylelearn.html">stylelearn</a>
-<p>点击 </p>
-<!-- 跳转到js学习第一个 -->
-<a href="jslearn/jsone.html">"我的第一个js"</a>
-
-<!-- 跳转到js学习第一个 -->
-<a href="jslearn/js_position.html">"js 位置放置学习"</a>
 <body>
-
+<p style="background-color: bisque;">来一个段落</p>
+<p style="background-color: red;text-align: right;">来二个段落</p>
 </body>
 
 </html>
