--- a/src/html/class_div_span.html
+++ b/src/html/class_div_span.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
+    <style type="text/css">
         /* 给milk的类定义 */
         .milk{
             background-color: black;
@@ -23,6 +23,7 @@
         }
     </style>
 </head>
+
 <body>
     <!-- div用milk类 -->
     <div class="milk">
