--- a/src/html/img.html
+++ b/src/html/img.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <p>图像<img src="https://www.w3school.com.cn/i/eg_cute.gif">在文本中</p>
+    <p>图像<img src="https://www.w3school.com.cn/i/eg_cute.gif" border="2">在文本中</p>
     <!-- 排列图像 -->
     <p>图像 <img src="https://www.w3school.com.cn/i/eg_cute.gif" align="top"> 在文本中</p>
     <p>请注意，bottom 对齐方式是默认的对齐方式。</p>
