--- a/src/html/link.html
+++ b/src/html/link.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>链接</title>
+    <!-- 全局，这样的话就默认都用新窗口打开 -->
+    <base target="_blank"/>
 </head>
 
 <body>
@@ -15,8 +17,7 @@
     <a href="http://www.w3school.com.cn/html/html_links.asp#tips">有用的提示</a>
 
     <!-- 图像作为链接 -->
-    <a><img
-            src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1579111459197&di=10274383c575f80c38dd62a3fe8d6ff4&imgtype=0&src=http%3A%2F%2Fvpic.video.qq.com%2F3388556%2Fd0334mrkh44_ori_3.jpg" /></a>
+    <a> <img src="ttps://www.w3school.com.cn/i/eg_cute.gif" /></a>
 
     <a href="http://www.w3school.com.cn/html/html_links.asp#tips" target="_blank">w3c官网，打开一个新窗口</a>
 
